refactor components to improve user experience
